--- a/givjoy/index.html
+++ b/givjoy/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>GivJoy Case Study</title>
-	<link rel="shortcut icon" href="favicon.ico" />
+	<link rel="shortcut icon" href="../favicon.ico" />
 	<meta prefix="og: http://ogp.me/ns#" property="og:image" content="https://raw.githubusercontent.com/ecsmith/me/gh-pages/img/me3.jpg" />
 	<meta prefix="og: http://ogp.me/ns#" />
 	<meta property="image" content="https://raw.githubusercontent.com/ecsmith/me/gh-pages/img/me3.jpg"/>
@@ -11,7 +11,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<meta name="keywords" content="" />
 	<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
-	<link rel="stylesheet" href="css/style.css" />
+	<link rel="stylesheet" href="../css/style.css" />
 	<!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]-->
 	<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
 </head>
