--- a/givjoy/index.html
+++ b/givjoy/index.html
@@ -69,7 +69,7 @@
 
 					<!-- </div> -->
 					<div class="row">
-						<div class="3u 12u$(medium)"><span class="image fit"><img src="images/GivJoy/protohack.png" alt="" /></span></div>
+						<div class="3u 12u$(medium)"><span class="image fit"><img src="images/protohack.png" alt="" /></span></div>
 
 						<div class="9u$ 12u$(medium)">
 							<h4>About ProtoHack</h4>
@@ -89,7 +89,7 @@
 						<h3>My Role in our Team</h3>
 						<p>Our ProtoHack team consisted of 5 individuals–3 Buisiness Development experts and 1 other UX Designer besides myself. I was by far the most junior person in the team–Most of the others had been in their respective industries for 5+ years. I wanted to pull my own weight in the team and prove myself.</p>
 
-						<!-- <span class="image left"><img src="images/GivJoy/GivJoy4.jpg" alt="" /></span> -->
+						<!-- <span class="image left"><img src="images/GivJoy4.jpg" alt="" /></span> -->
 						<h3>Our Initial Steps</h3>
 						<p>ProtoHack has begun! In the beginning each member of the team had various assumptions about what we were going to build. Our initial steps in the process were establishing ground rules, aligning the team, creating a schedule for the day and identifying our problem. I proposed we try an activity similar to an affinity diagraming exercise to flesh out our assumptions. It was this exercise that helped us hone in our intial problem statement:</p>
 						<blockquote><span class="big">Our Users have trouble finding a unique way to spread joy to friends & family. Its time consuming to find unique gifts for them.</span></blockquote>
@@ -98,7 +98,7 @@
 						<p>The affinity mapping exercise also revealed that we would need to do more research to <strong>validate our hypotheses</strong>. Together we needed to validate with real people whether the joy bringing platform would be a viable idea. We needed to figure out "What incites joy in people?", "Should gift-giving be part of our solution?" and "What motivation do people have in giving joy?"</p>
 
 						<div class="row">
-							<div class=" 6u 12u$(medium)"><span class="image fit"><img src="images/GivJoy/user-groups.png" alt="" /></span></div>
+							<div class=" 6u 12u$(medium)"><span class="image fit"><img src="images/user-groups.png" alt="" /></span></div>
 							<div class=" 6u$ 12u$(medium)"><blockquote>We decided that the scope of the hackthon would be designing a user flow for the <strong>joy-sender</strong>. Much of the research we needed to do had to identify what was important to our user flow on the side of the joy-sender. </blockquote></div>
 						</div>
 
@@ -124,10 +124,10 @@
 
 					<h3>User Flow & Sketches</h3>
 					<div class="row">
-						<div class=" 6u 12u$(medium)"><span class="image fit"><img src="images/GivJoy/sender-flow.jpg" alt="" /></span></div>
+						<div class=" 6u 12u$(medium)"><span class="image fit"><img src="images/sender-flow.jpg" alt="" /></span></div>
 						<div class=" 6u$ 12u$(medium)"><blockquote>As we designed a user flow for the joy-sender we tried to take into account the insights we gained from our research.<br/><br/>The sketches we're drawn by me with help from one of the marketing individuals.</blockquote></div>
 					</div>
-					<span class="image fit"><img src="images/GivJoy/sketches.jpg" alt="" /></span>
+					<span class="image fit"><img src="images/sketches.jpg" alt="" /></span>
 					<p>
 						With these sketches we were able to create a low-fidelity prototype in InVision. It was at this point that we decided to stop and work on our presentation
 					</p>
