--- a/scholastic/index.html
+++ b/scholastic/index.html
@@ -33,9 +33,9 @@
 						<a href="#" class="menuToggle"><span></span></a>
 						<div id="menu">
 							<ul>
-								<li><a href="index.html">Home</a></li>
+								<li><a href="../">Home</a></li>
 								<li><a href="../givjoy/">GivJoy</a></li>
-								<li><a href="#">Scholastic</a></li>
+								<li><a href=".">Scholastic</a></li>
 								<li><a href="https://github.com/ecsmith/M-E">M&E</a></li>
 								<li><a href="https://github.com/ecsmith/box-app">Box</a></li>
 								<li><a href="http://ecsmith.github.io/me/resume/ericsmith-resume.pdf">Resume</a></li>
