--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 						<div id="menu">
 							<ul>
 								<li><a href=".">Home</a></li>
-								<li><a href="/givjoy/">GivJoy</a></li>
-								<li><a href="/scholastic/">Scholastic</a></li>
+								<li><a href="givjoy/">GivJoy</a></li>
+								<li><a href="scholastic/">Scholastic</a></li>
 								<li><a href="https://github.com/ecsmith/M-E">M&E</a></li>
 								<li><a href="https://github.com/ecsmith/box-app">Box</a></li>
 								<li><a href="http://ecsmith.github.io/me/resume/ericsmith-resume.pdf">Resume</a></li>
