--- a/givjoy/index.html
+++ b/givjoy/index.html
@@ -30,9 +30,9 @@
 						<a href="#" class="menuToggle"><span></span></a>
 						<div id="menu">
 							<ul>
-								<li><a href="index.html">Home</a></li>
-								<li><a href="givjoy.html">GivJoy</a></li>
-								<li><a href="scholastic.html">Scholastic</a></li>
+								<li><a href="../">Home</a></li>
+								<li><a href=".">GivJoy</a></li>
+								<li><a href="../scholastic/">Scholastic</a></li>
 								<li><a href="https://github.com/ecsmith/M-E">M&E</a></li>
 								<li><a href="https://github.com/ecsmith/box-app">Box</a></li>
 								<li><a href="http://ecsmith.github.io/me/resume/ericsmith-resume.pdf">Resume</a></li>
