added perforce page and cisco page yay!

--- a/givjoy/index.html
+++ b/givjoy/index.html
@@ -31,8 +31,10 @@
 						<div id="menu">
 							<ul>
 								<li><a href="../">Home</a></li>
+								<li><a href="../perforce/">Perforce</a></li>
 								<li><a href=".">GivJoy</a></li>
 								<li><a href="../scholastic/">Scholastic</a></li>
+								<li><a href="../cisco/">Cisco</a></li>
 								<li><a href="https://github.com/ecsmith/M-E">M&E</a></li>
 								<li><a href="https://github.com/ecsmith/box-app">Box</a></li>
 								<li><a href="http://ecsmith.github.io/me/resume/ericsmith-resume.pdf">Resume</a></li>
@@ -177,8 +179,9 @@
 <!-- Footer -->
 <footer id="footer">
 	<ul class="icons">
-		<li><a href="https://www.facebook.com/erchsm" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-		<li><a href="https://instagram.com/smitten___/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+		<li><a href="https://linkedin.com/in/erchsm" class="icon fa-linkedin"><span class="label">Facebook</span></a></li>
+		<li><a href="https://www.flickr.com/photos/erchsm/" class="icon fa-flickr"><span class="label">Flickr</span></a></li>
+		<li><a href="https://instagram.com/erchsm/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 		<li><a href="https://github.com/ecsmith" class="icon fa-github"><span class="label">Github</span></a></li>
 	</ul>
 	<!-- <ul class="copyright">
