--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
 						<div id="menu">
 							<ul>
 								<li><a href=".">Home</a></li>
+								<li><a href="perforce/">GivJoy</a></li>
 								<li><a href="givjoy/">GivJoy</a></li>
 								<li><a href="scholastic/">Scholastic</a></li>
+								<li><a href="cisco/">Cisco</a></li>
 								<li><a href="https://github.com/ecsmith/M-E">M&E</a></li>
 								<li><a href="https://github.com/ecsmith/box-app">Box</a></li>
 								<li><a href="http://ecsmith.github.io/me/resume/ericsmith-resume.pdf">Resume</a></li>
@@ -74,9 +76,10 @@
 			<div class="image"><img src="perforce/images/case-study-image.png" alt="" /></div><div class="content">
 			<h2>Interaction Design:
 				Helix Sync</h2>
-				<p>Helix Sync is a project I worked on at Perforce. The goal of this desktop application is to make version control more accessible</p>
+				<p>Helix Sync is a project I worked on at Perforce. The goal of this desktop application is to create a version control tool for the less technical user.</p>
+				<!-- My goals for this project we're to increase accessibility -->
 				<ul class="actions">
-					<li><a href="givjoy.html" class="button fit">Learn More</a></li>
+					<li><a href="perforce/" class="button fit">Learn More</a></li>
 				</ul>
 			</div>
 		</section>
@@ -86,7 +89,7 @@
 				ProtoHack &times; GivJoy</h2>
 				<p>GivJoy is a mobile application and marketplace for spreading joy to others. GivJoy was created in 9 hours during ProtoHack SF, a code-free hackathon.</p>
 				<ul class="actions">
-					<li><a href="" class="button fit">Learn More</a></li>
+					<li><a href="givjoy/" class="button fit">Learn More</a></li>
 				</ul>
 			</div>
 		</section>
@@ -96,7 +99,17 @@
 				Scholastic</h2>
 				<p>My team and I were asked to take advantage of digital technology to encourage children to read books outside of school. We came up with two features that could be seamlessly integrated into Scholastic's existing website.</p>
 				<ul class="actions">
-					<li><a href="scholastic.html" class="button fit">Learn More</a></li>
+					<li><a href="scholastic/" class="button fit">Learn More</a></li>
+				</ul>
+			</div>
+		</section>
+		<section class="spotlight">
+			<div class="image"><img src="cisco/images/case-study-image.png" alt="" /></div><div class="content">
+			<h2>UI Engineering:
+				Cisco</h2>
+				<p>My second position at Cisco involved creating web UI using HTML, CSS & Javascript. In my first role I created API documentation to assist developers in using out product.</p>
+				<ul class="actions">
+					<li><a href="cisco/" class="button fit">Learn More</a></li>
 				</ul>
 			</div>
 		</section>
@@ -138,7 +151,8 @@
 <footer id="footer">
 	<ul class="icons">
 		<li><a href="https://linkedin.com/in/erchsm" class="icon fa-linkedin"><span class="label">Facebook</span></a></li>
-		<li><a href="https://instagram.com/smitten___/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+		<li><a href="https://www.flickr.com/photos/erchsm/" class="icon fa-flickr"><span class="label">Flickr</span></a></li>
+		<li><a href="https://instagram.com/erchsm/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 		<li><a href="https://github.com/ecsmith" class="icon fa-github"><span class="label">Github</span></a></li>
 	</ul>
 						<!-- <ul class="copyright">
