--- a/perforce/index.html
+++ b/perforce/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-	<title>GivJoy Case Study</title>
+	<title>Perforce Case Study</title>
 	<link rel="shortcut icon" href="../favicon.ico" />
-	<meta prefix="og: http://ogp.me/ns#" property="og:image" content="https://raw.githubusercontent.com/ecsmith/me/gh-pages/img/me3.jpg" />
+	<meta prefix="og: http://ogp.me/ns#" property="og:image" content="https://raw.githubusercontent.com/ecsmith/me/gh-pages/perforce/images/bg.png" />
 	<meta prefix="og: http://ogp.me/ns#" />
-	<meta property="image" content="https://raw.githubusercontent.com/ecsmith/me/gh-pages/img/me3.jpg"/>
+	<meta property="image" content="https://raw.githubusercontent.com/ecsmith/me/gh-pages/perforce/images/bg.png"/>
 	<meta name="description" content="I'm a UI/UX Designer & Engineer located in the SF Bay Area. I've prepared this site to showcase my work. For code samples check out my Github.">
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -47,22 +47,24 @@
 
 			<!-- Main -->
 			<article id="main">
-				<header class="style7">
-					<h2>Perforce</h2>
+				<header class="style8">
+					<h2>Helix Sync<span class="x">&times;</span>Perforce</h2>
 <!-- 							<p>Aliquam ut ex ut interdum donec amet imperdiet eleifend</p>
 -->					</header>
 <section class="wrapper style5">
 	<div class="inner">
 		
-		<div class="col">
-			<div class="6u 12u(medium)">
-				<span class="image fit"><img src="images/mate-ui.png" alt=""/></span>
-			</div>
-			<div class="6u$ 12u$(medium)">
-				<h4>UI Engineer</h4>
-				<p>In my second role at Cisco I worked as a UI Engineer. The project I worked on was a web application that utilized HTML, CSS and Javascript to allow our users to visualize their WAN(Wide Area Network). More specifically our application utilized  javascript libraries and frameworks including NodeJS, BackboneJS & HighchartsJS. 
+		<div class="row">
+			<div class="6u 12u$(medium)">
+				<h4>Helix Sync</h4>
+				<p>I'm currently working at Perforce as a UX Designer! We're currently working on a project called Helix Sync. The product is in its early stages I'm creating a concept prototype with <a href="proto.io">proto.io</a>. I will be able to publish a link soon!
 				</p>
-				<p>Unfortunately, my work on this team is covered under an NDA and I am not allowed to disclose any further details on my personal site. I can however, show my contributions to the project in a in-person demo. Please contact me for more details regarding the project or to schedule a time to see it live!</p>
+				<p>In the meantime I've been creating little logos & headlines with Sketch. Enjoy!</p>
+			</div>
+			<div class="6u 12u$(medium)">
+				<span class="image fit"><img src="images/HELIX  INVERSE.png" alt=""/></span>
+				<span class="image fit"><img src="images/HELIX .png" alt=""/></span>
+				<span class="image fit"><img src="images/HELIX WITH SOME TEXT.png" alt=""/></span>
 			</div>
 		</div>
 	</div>
