--- a/perforce/index.html
+++ b/perforce/index.html
@@ -57,7 +57,7 @@
 		<div class="row">
 			<div class="6u 12u$(medium)">
 				<h4>Helix Sync</h4>
-				<p>I'm currently working at Perforce as a UX Designer! We're currently working on a project called Helix Sync. The product is in its early stages I'm creating a concept prototype with <a href="proto.io">proto.io</a>. I will be able to publish a link soon!
+				<p>I'm currently working at Perforce as a UX Designer! We're currently working on a project called Helix Sync. The product is in its early stages and I'm creating a concept prototype to test with our existing customers. I'm creating this awesome prototyping tool called <a href="proto.io">proto.io</a> & hopefully I'll be able to publish a link here soon!
 				</p>
 				<p>In the meantime I've been creating little logos & headlines with Sketch. Enjoy!</p>
 			</div>
