--- a/givjoy/index.html
+++ b/givjoy/index.html
@@ -80,17 +80,15 @@
 
 							</div>
 						</div>
-					</div>
-				</section>
-				<header class="style4">
-					<h2>My Team<span class="x">&times;</span>The Beginning</h2>
-				</header>
-				<section class="wrapper style5">
-					<div class="inner">
 
-						<h3>My Role in our Team</h3>
-						<p>Our ProtoHack team consisted of 5 individuals–3 Buisiness Development experts and 1 other UX Designer besides myself. I was by far the most junior person in the team–Most of the others had been in their respective industries for 5+ years. I wanted to pull my own weight in the team and prove myself.</p>
+						<div class="row">
+							<div class="6u 12u(medium)"><span class="image fit"><img src="images/team.jpg" alt="" /></span></div>
 
+							<div class="6u$ 12u$(medium)">
+								<h3>My Role in our Team</h3>
+								<p>Our ProtoHack team consisted of 5 individuals–3 Buisiness Development experts and 1 other UX Designer besides myself. I was by far the most junior person in the team–Most of the others had been in their respective industries for 5+ years. I wanted to pull my own weight in the team and prove myself.</p>
+							</div>
+						</div>
 						<!-- <span class="image left"><img src="images/GivJoy4.jpg" alt="" /></span> -->
 						<h3>Our Initial Steps</h3>
 						<p>ProtoHack has begun! In the beginning each member of the team had various assumptions about what we were going to build. Our initial steps in the process were establishing ground rules, aligning the team, creating a schedule for the day and identifying our problem. I proposed we try an activity similar to an affinity diagraming exercise to flesh out our assumptions. It was this exercise that helped us hone in our intial problem statement:</p>
