--- a/scholastic/index.html
+++ b/scholastic/index.html
@@ -58,91 +58,84 @@
 			<section class="wrapper style5">
 				<div class="inner">
 					<div class="row">
-						<div class="6u 12u$(medium)">
+						<div class="6u 12u(medium)">
 							<b>THE CLIENT</b>
 							<p>Scholastic is the world's leading publisher and distributor of children's books. </p>
-						</div>                   
+							<b>THE SOLUTION</b>
+							<p>We ended up creating an online system to help encourage children to read outside of school. Our system included quizzes to help children discover books curated to their liking, a new bookshelf for children to track the books they have read and way for kids to request books from their parents.</p>
+							<!-- </header> -->
+							<ul class="actions vertical">
+								<li><a href="https://projects.invisionapp.com/share/AT2TBFZ4W#/screens" class="button ">Our prototyped solution!</a></li>
+							</ul>
+						</div>               
 						<div class="6u$ 12u$(medium)">
 							<b>THE TASK</b>
 							<p>We were asked to take advantage of digital technology and positive role models to encourage children to read books outside of school.</p>
-						</div>
-						<div class="12u$ 12u$(medium)">
 							<b>THE PROBLEM</b>
 							<p>We discovered from our interviews and surveys that children were not reading on digital devices. It was also revealed that the approach to integrating a role model was not necessary. The real challenge was finding a way for children to choose and find paper books in a fun and exciting way. </p>
+							<b>MY ROLE</b> <p>I heavily contributed to persona development & I created the visual designs for the personas. I was also in charge of creating survey questions, conducting interviews, wireframing, prototyping, and usability testing. </p>
 						</div>     
-						<div class="12u$ 12u$(medium)">
-							<!-- <header> -->
-							<b>THE SOLUTION</b>
-							<p>A new bookshelf and quiz feature to encourage children to read outside of school. </p>
-							<!-- </header> -->
-							<ul class="actions vertical">
-								<li><a href="https://projects.invisionapp.com/share/AT2TBFZ4W#/screens" class="button fit">Go!</a></li>
-							</ul>
-						</div> 
-						<!-- <div class="6u 12u$(medium)">
-							<b>Our low fidelity prototype in Invision</b>
-						</div>
-						<div class="6u$ 12u$(medium)">
-
-							<ul class="actions vertical">
-								<li><a href="https://projects.invisionapp.com/share/AT2TBFZ4W#/screens" class="button fit">LOW FIDELITY PROTOTYPE</a></li>
-							</ul>
-						</div>  -->
-
-						<div class="12u$ 12u$(medium)">
-							<b>MY ROLE</b> <p>I was in charge of creating survey questions, conducting interviews, persona development, creating the visual designs for the personas, wireframing, prototyping, and usability testing. </p>
-						</div>
 					</div>
 
 
-					<h2>RESEARCH</h2>
-					<p>A closer look at Scholastic's website...</p>
-					<span class="image fit"><img src="http://static1.squarespace.com/static/537a754de4b0297decd9ef74/t/553d42e3e4b0803a46dd012f/1430078193911/Screen+Shot+2015-04-26+at+12.55.59+PM.png?format=1000w" alt="" /></span>
 
 
 
-					<p>There is a children's section called "The Stacks" that has lots of quizzes and games that do not encourage children to read.</p> 
+						<h2>RESEARCH</h2>
+						<p>A closer look at Scholastic's website...</p>
+						<span class="image fit"><img src="http://static1.squarespace.com/static/537a754de4b0297decd9ef74/t/553d42e3e4b0803a46dd012f/1430078193911/Screen+Shot+2015-04-26+at+12.55.59+PM.png?format=1000w" alt="" /></span>
 
-					<h2>SURVEY</h2>
 
-					<p>What media are kids using to read?</p>
-					<span class="image fit"><img src="http://static1.squarespace.com/static/537a754de4b0297decd9ef74/t/553d47c4e4b0e618515fd9b1/1430079431646/survey_chart.jpg?format=1000w" alt="" /></span>					
-					<p>From our results, it is clear that children read mostly paper books rather than digital.</p> 
-					<h2>INTERVIEWS</h2>
 
-					<span class="image fit"><img src="http://static1.squarespace.com/static/537a754de4b0297decd9ef74/t/553d6283e4b0ed6ca354dc5b/1430086277147/?format=500w" alt="" /></span>
-					<p>From our interviews, we discovered that role models are not important. Several of the interviewees had no idea who their role models were.</p>
+						<p>There is a children's section called "The Stacks" that has lots of quizzes and games that do not encourage children to read.</p> 
 
-					<h2>CONTEXTUAL INQUIRY</h2>
-					<p> Parents let their children wander the aisles to look for their own books. Children did not get any help from the parents because it's much more fun for the kids to be able to have a say in what they want to read. </p>
-					<div class="row">
-						<div class="6u 12u$(medium)">
-							<span class="image fit"><img src="http://static1.squarespace.com/static/537a754de4b0297decd9ef74/t/553d563ae4b0786b41e0369d/1430083171435/IMG_0803.JPG?format=1000w" alt="" /></span>
+						<h2>SURVEY</h2>
+
+
+						<span class="image fit"><img src="http://static1.squarespace.com/static/537a754de4b0297decd9ef74/t/553d47c4e4b0e618515fd9b1/1430079431646/survey_chart.jpg?format=1000w" alt="" /></span>	
+
+						<p>What media are kids using to read? From our results, it is clear that children read mostly paper books rather than digital.</p> 				
+						<div class="row">
+							<div class="6u 12u(medium)">
+								<h2>INTERVIEWS</h2>
+
+								<p>From our interviews, we discovered that role models are not important. Several of the interviewees had no idea who their role models were.</p>
+
+							</div>
+							<div class="6u 12u$(medium)">
+								<span class="image fit"><img src="http://static1.squarespace.com/static/537a754de4b0297decd9ef74/t/553d6283e4b0ed6ca354dc5b/1430086277147/?format=500w" alt="" /></span>
+							</div>
 						</div>
-						<div class="6u$ 12u$(medium)">
-							<span class="image fit"><img src="http://static1.squarespace.com/static/537a754de4b0297decd9ef74/t/553d5869e4b0e7ec9171650e/1430083695180/?format=500w" alt="" /></span>
-						</div>
-					</div>
-					<h3>What do kids really like?</h3>
+						<h2>CONTEXTUAL INQUIRY</h2>
+						<p> Parents let their children wander the aisles to look for their own books. Children did not get any help from the parents because it's much more fun for the kids to be able to have a say in what they want to read. </p>
+						<div class="row">
+							<div class="6u 12u$(medium)">
+								<span class="image fit"><img src="http://static1.squarespace.com/static/537a754de4b0297decd9ef74/t/553d5869e4b0e7ec9171650e/1430083695180/?format=500w" alt="" /></span>
+							</div>
+							<div class="6u$ 12u$(medium)">
+								<span class="image fit"><img src="http://static1.squarespace.com/static/537a754de4b0297decd9ef74/t/553d563ae4b0786b41e0369d/1430083171435/IMG_0803.JPG?format=1000w" alt="" /></span>
+							</div>
+													</div>
+						<h3>What do kids really like?</h3>
 
-					<p>There was an entire section dedicated to these quiz books. This appears to be the new fad where children can answer a multitude of random questions for fun.</p> 
-					<h2>NEW HYPOTHESIS</h2>
+						<p>There was an entire section dedicated to these quiz books. This appears to be the new fad where children can answer a multitude of random questions for fun.</p> 
+						<h2>NEW HYPOTHESIS</h2>
 
-					<p>Children would be more encouraged to read outside of school if there was a way to take advantage of digital technology to make choosing books fun and exciting.</p>
-					<h2>PERSONA DEVELOPMENT</h2>
+						<p>Children would be more encouraged to read outside of school if there was a way to take advantage of digital technology to make choosing books fun and exciting.</p>
+						<h2>PERSONA DEVELOPMENT</h2>
 
-					From our research, were were able to start developing personas. We managed to narrow it down to one primary persona. Meet Lanie! 
+						From our research, were were able to start developing personas. We managed to narrow it down to one primary persona. Meet Lanie! 
 
-					<span class="image fit"><img src="http://static1.squarespace.com/static/537a754de4b0297decd9ef74/t/553d58eae4b0786b41e04491/1430083828782/lanie.png?format=1000w" alt="" /></span>
-					<h2>USER FLOW</h2>
+						<span class="image fit"><img src="http://static1.squarespace.com/static/537a754de4b0297decd9ef74/t/553d58eae4b0786b41e04491/1430083828782/lanie.png?format=1000w" alt="" /></span>
+						<h2>USER FLOW</h2>
 
-					<p>Keeping our primary persona Lanie in mind, we were able to develop a user flow based off of "The Stacks" website. This is our second iteration that was created in Omnigraffle.</p>  
+						<p>Keeping our primary persona Lanie in mind, we were able to develop a user flow based off of "The Stacks" website. This is our second iteration that was created in Omnigraffle.</p>  
 
-					<span class="image fit"><img src="http://static1.squarespace.com/static/537a754de4b0297decd9ef74/t/553db053e4b0bd2bbd40f920/1430106197269/?format=1000w" alt="" /></span>
-					<h2>SKETCHES</h2>
+						<span class="image fit"><img src="http://static1.squarespace.com/static/537a754de4b0297decd9ef74/t/553db053e4b0bd2bbd40f920/1430106197269/?format=1000w" alt="" /></span>
+						<h2>SKETCHES</h2>
 
-					Initial sketches of possible interfaces before digitization. 
-					<span class="image fit"><img src="http://static1.squarespace.com/static/537a754de4b0297decd9ef74/t/553d6678e4b0ee62c7bcaf2d/1430087317595/?format=1000w" alt="" /></span>
+						Initial sketches of possible interfaces before digitization. 
+						<span class="image fit"><img src="http://static1.squarespace.com/static/537a754de4b0297decd9ef74/t/553d6678e4b0ee62c7bcaf2d/1430087317595/?format=1000w" alt="" /></span>
 				<!-- 	<h2>DESIGN ITERATIONS</h2>
 
 				<p>Several sketches later, we were able to start digitizing.</p> -->
@@ -160,13 +153,13 @@
 
 					<!-- VIEW PROTOTYPE -->
 					<h2>NEXT STEPS</h2>
-					<ul>
-						<ol>Exciting Delivery Experience - Include some kind of activity in a child's package so that they feel inclined to purchase more books in the future.</li> 
+					<ol>
+						<li>Exciting Delivery Experience - Include some kind of activity in a child's package so that they feel inclined to purchase more books in the future.</li> 
 
-							<ol>10 Word Book Review - This would allow the ability for children to express how they feel about a book they read.</li> 
+							<li>10 Word Book Review - This would allow the ability for children to express how they feel about a book they read.</li> 
 
-								<ol>Badge System - This would create a way for a child to keep track of their accomplishments by receiving badges for completing and reviewing books.< 
-								</ul>		
+								<li>Badge System - This would create a way for a child to keep track of their accomplishments by receiving badges for completing and reviewing books.< 
+								</li>		
 							</section>
 						</div>
 						<section id="cta" class="wrapper style5">
