--- a/scholastic/index.html
+++ b/scholastic/index.html
@@ -4,9 +4,9 @@
 	<title>Eric Smith's Portfolio</title>
 	<link rel="shortcut icon" href="../favicon.ico" />
 
-	<meta prefix="og: http://ogp.me/ns#" property="og:image" content="https://raw.githubusercontent.com/ecsmith/me/gh-pages/scholastic/images/Personas/High Fidelity Personas/lanie.jpg" />
+	<meta prefix="og: http://ogp.me/ns#" property="og:image" content="https://raw.githubusercontent.com/ecsmith/me/gh-pages/scholastic/images/Personas/High Fidelity Personas/lanie.png" />
 	<meta prefix="og: http://ogp.me/ns#" />
-	<meta property="image" content="https://raw.githubusercontent.com/ecsmith/me/gh-pages/scholastic/images/Personas/High%20Fidelity%20Personas/lanie.png"/>
+	<meta property="image" content="https://raw.githubusercontent.com/ecsmith/me/gh-pages/scholastic/images/Personas/High Fidelity Personas/lanie.png"/>
 	<meta name="description" content="I'm a UI/UX Designer & Engineer located in the SF Bay Area. I've prepared this site to showcase my work. For code samples check out my Github.">
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
