--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 						<div id="menu">
 							<ul>
 								<li><a href=".">Home</a></li>
-								<li><a href="perforce/">GivJoy</a></li>
+								<li><a href="perforce/">Perforce</a></li>
 								<li><a href="givjoy/">GivJoy</a></li>
 								<li><a href="scholastic/">Scholastic</a></li>
 								<li><a href="cisco/">Cisco</a></li>
