--- a/scholastic/index.html
+++ b/scholastic/index.html
@@ -153,11 +153,11 @@
 					<!-- VIEW PROTOTYPE -->
 					<h2>NEXT STEPS</h2>
 					<ol>
-						<li>Exciting Delivery Experience - Include some kind of activity in a child's package so that they feel inclined to purchase more books in the future.</li> 
+						<li><b>Exciting Delivery Experience</b> - Include some kind of activity in a child's package so that they feel inclined to purchase more books in the future.</li> 
 
-						<li>10 Word Book Review - This would allow the ability for children to express how they feel about a book they read.</li> 
+						<li><b>10 Word Book Review</b> - This would allow the ability for children to express how they feel about a book they read.</li> 
 
-						<li>Badge System - This would create a way for a child to keep track of their accomplishments by receiving badges for completing and reviewing books.< 
+						<li><b>Badge System</b> - This would create a way for a child to keep track of their accomplishments by receiving badges for completing and reviewing books.
 						</li>		
 					</section>
 				</div>
