perforce image added

--- a/scholastic/index.html
+++ b/scholastic/index.html
@@ -153,7 +153,7 @@
 					<!-- VIEW PROTOTYPE -->
 					<h2>NEXT STEPS</h2>
 					<ol>
-						<li><b>Exciting Delivery Experience</b> - Include some kind of activity in a child's package so that they feel inclined to purchase more books in the future.</li> 
+						<li><b>An Exciting Delivery Experience</b> - Include unique packaging & some kind of activity in a child's package so that they feel inclined to purchase more books in the future.</li> 
 
 						<li><b>10 Word Book Review</b> - This would allow the ability for children to express how they feel about a book they read.</li> 
 
