--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
 	<title>Eric Smith's Portfolio</title>
 	<link rel="shortcut icon" href="favicon.ico" />
-	<meta prefix="og: http://ogp.me/ns#" property="og:image" content="https://raw.githubusercontent.com/ecsmith/me/gh-pages/images/banner.png" />
+	<meta prefix="og: http://ogp.me/ns#" property="og:image" content="https://raw.githubusercontent.com/erchsm/me/gh-pages/images/banner.png" />
 	<meta prefix="og: http://ogp.me/ns#" />
-	<meta property="image" content="https://raw.githubusercontent.com/ecsmith/me/gh-pages/images/banner.png"/>
-	<meta property="og:image" content="https://raw.githubusercontent.com/ecsmith/me/gh-pages/images/banner.png"/>
+	<meta property="image" content="https://raw.githubusercontent.com/erchsm/me/gh-pages/images/banner.png"/>
+	<meta property="og:image" content="https://raw.githubusercontent.com/erchsm/me/gh-pages/images/banner.png"/>
 	<meta name="description" content="I'm a UI/UX Designer & Engineer located in the SF Bay Area. I've prepared this site to showcase my work.">
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -35,9 +35,9 @@
 								<li><a href="givjoy/">GivJoy</a></li>
 								<li><a href="scholastic/">Scholastic</a></li>
 								<li><a href="cisco/">Cisco</a></li>
-								<li><a href="https://github.com/ecsmith/M-E">M&E</a></li>
-								<li><a href="https://github.com/ecsmith/box-app">Box</a></li>
-								<li><a href="http://ecsmith.github.io/me/resume/ericsmith-resume.pdf">Resume</a></li>
+								<li><a href="https://github.com/erchsm/M-E">M&E</a></li>
+								<li><a href="https://github.com/erchsm/box-app">Box</a></li>
+								<li><a href="http://erchsm.github.io/me/resume/ericsmith-resume.pdf">Resume</a></li>
 								<li><a href="#">Contact</a></li>
 							</ul>
 						</div>
@@ -62,7 +62,7 @@
 			<div class="inner">
 				<header class="major">
 					<h2>Hi there. I'm Eric!</h2>
-					<p><br/>I'm a UX Designer and UI Engineer located in the SF Bay Area. I've coded this site with my own two hands as a way to showcase my work. Below you'll find some case studies I've worked on. For more code samples check out my <a href="http://github.com/ecsmith">github</a>. When im not designing or coding I'm either taking photos or out enjoying some nature.
+					<p><br/>I'm a UX Designer and UI Engineer located in the SF Bay Area. I've coded this site with my own two hands as a way to showcase my work. Below you'll find some case studies I've worked on. For more code samples check out my <a href="http://github.com/erchsm">github</a>. When im not designing or coding I'm either taking photos or out enjoying some nature.
 					</p><p>
 					For me UX is the perfect intersection of Computer Science, Customer Service and Creative Thinking. My background in engineering and design allows me to act a bridge in communication for both designers & engineers. My experience working in a cooperative has also given me skills to excel in any team environment.
 				</p>
@@ -114,20 +114,20 @@
 			</div>
 		</section>
 		<section class="spotlight">
-			<div class="image"><img src="https://raw.githubusercontent.com/ecsmith/M-E/master/screenshots/case-study-image.png" alt="" /></div><div class="content">
+			<div class="image"><img src="https://raw.githubusercontent.com/erchsm/M-E/master/screenshots/case-study-image.png" alt="" /></div><div class="content">
 			<h2>Mobile Design: M&E</h2>
 			<p>Meet and Eat(M&E) is an app designed to allow users to organize meet-ups with friends to get a bite to eat. Our target audience was college students. The application allows users to plan meetups using scales such as time, date and location preferences.</p>
 			<ul class="actions">
-				<li><a href="https://github.com/ecsmith/M-E/blob/gh-pages/README.md" class="button fit">Learn More</a></li>
+				<li><a href="https://github.com/erchsm/M-E/blob/gh-pages/README.md" class="button fit">Learn More</a></li>
 			</ul>
 		</div>    
 	</section>
 	<section class="spotlight">
-		<div class="image"><img src="https://raw.githubusercontent.com/ecsmith/box-app/gh-pages/screenshots/case-study-image.png" alt="" /></div><div class="content">
+		<div class="image"><img src="https://raw.githubusercontent.com/erchsm/box-app/gh-pages/screenshots/case-study-image.png" alt="" /></div><div class="content">
 		<h2>Chrome Extension: Box Secure Sharing</h2>
 		<p>This Chrome Extension is designed for two Box users to securely transfer files. This was an exercise in using the Box API and crafting a experience that allows the users feel secure in transfering their files.</p>
 		<ul class="actions">
-			<li><a href="https://github.com/ecsmith/box-app/blob/gh-pages/README.md" class="button fit">Learn More</a></li>
+			<li><a href="https://github.com/erchsm/box-app/blob/gh-pages/README.md" class="button fit">Learn More</a></li>
 		</ul>
 	</div>
 </section>
@@ -141,7 +141,7 @@
 			<p>Send me an email &horbar; Oh and here's my resume!</p>
 		</header>
 		<ul class="actions vertical">
-			<li><a href="http://ecsmith.github.io/me/resume/ericsmith-resume.pdf" class="button fit">My Resume</a></li>
+			<li><a href="http://erchsm.github.io/me/resume/ericsmith-resume.pdf" class="button fit">My Resume</a></li>
 			<li><a href="#" class="button fit">Email Me</a></li>
 		</ul>
 	</div>
@@ -153,7 +153,7 @@
 		<li><a href="https://linkedin.com/in/erchsm" class="icon fa-linkedin"><span class="label">Facebook</span></a></li>
 		<li><a href="https://www.flickr.com/photos/erchsm/" class="icon fa-flickr"><span class="label">Flickr</span></a></li>
 		<li><a href="https://instagram.com/erchsm/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-		<li><a href="https://github.com/ecsmith" class="icon fa-github"><span class="label">Github</span></a></li>
+		<li><a href="https://github.com/erchsm" class="icon fa-github"><span class="label">Github</span></a></li>
 	</ul>
 						<!-- <ul class="copyright">
 							<li>&copy; Eric Smith</li><li>Design: Inspired from HTML5UP</li>
