--- a/scholastic/index.html
+++ b/scholastic/index.html
@@ -4,9 +4,9 @@
 	<title>Eric Smith's Portfolio</title>
 	<link rel="shortcut icon" href="../favicon.ico" />
 
-	<meta prefix="og: http://ogp.me/ns#" property="og:image" content="https://raw.githubusercontent.com/ecsmith/me/gh-pages/scholastic/images/Personas/High Fidelity Personas/lanie.png" />
+	<meta prefix="og: http://ogp.me/ns#" property="og:image" content="https://raw.githubusercontent.com/erchsm/me/gh-pages/scholastic/images/lanie.png" />
 	<meta prefix="og: http://ogp.me/ns#" />
-	<meta property="image" content="https://raw.githubusercontent.com/ecsmith/me/gh-pages/scholastic/images/Personas/High Fidelity Personas/lanie.png"/>
+	<meta property="image" content="https://raw.githubusercontent.com/erchsm/me/gh-pages/scholastic/images/lanie.png"/>
 	<meta name="description" content="I'm a UI/UX Designer & Engineer located in the SF Bay Area. I've prepared this site to showcase my work. For code samples check out my Github.">
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -38,9 +38,9 @@
 								<li><a href="../givjoy/">GivJoy</a></li>
 								<li><a href=".">Scholastic</a></li>
 								<li><a href="../cisco/">Cisco</a></li>
-								<li><a href="https://github.com/ecsmith/M-E">M&E</a></li>
-								<li><a href="https://github.com/ecsmith/box-app">Box</a></li>
-								<li><a href="http://ecsmith.github.io/me/resume/ericsmith-resume.pdf">Resume</a></li>
+								<li><a href="https://github.com/erchsm/M-E">M&E</a></li>
+								<li><a href="https://github.com/erchsm/box-app">Box</a></li>
+								<li><a href="http://erchsm.github.io/me/resume/ericsmith-resume.pdf">Resume</a></li>
 								<li><a href="#">Contact</a></li>
 							</ul>
 						</div>
@@ -180,7 +180,7 @@
 					<li><a href="https://linkedin.com/in/erchsm" class="icon fa-linkedin"><span class="label">Facebook</span></a></li>
 					<li><a href="https://www.flickr.com/photos/erchsm/" class="icon fa-flickr"><span class="label">Flickr</span></a></li>
 					<li><a href="https://instagram.com/erchsm/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a href="https://github.com/ecsmith" class="icon fa-github"><span class="label">Github</span></a></li>
+					<li><a href="https://github.com/erchsm" class="icon fa-github"><span class="label">Github</span></a></li>
 				</ul>
 						<!-- <ul class="copyright">
 							<li>&copy; Eric Smith</li><li>Design: Inspired from HTML5UP</li>
