--- a/cisco/index.html
+++ b/cisco/index.html
@@ -60,7 +60,7 @@
 			</div>
 			<div class="6u$ 12u$(medium)">
 				<h4>UI Engineer</h4>
-				<p>In my second role at Cisco I worked as a UI Engineer. The project I worked on was a web application that utilized HTML, CSS and Javascript to allow our users to visualize their WAN(Wide Area Network). More specifically our application utilized  javascript libraries and frameworks including NodeJS, BackboneJS & HighchartsJS. 
+				<p>In my second role at Cisco I worked as a UI Engineer. The project I worked on was a web application that utilized HTML, CSS and Javascript to allow our users to visualize their WAN(Wide Area Network). More specifically our application utilized  javascript libraries/frameworks including NodeJS, BackboneJS & HighchartsJS. 
 				</p>
 				<p>Unfortunately, my work on this team is covered under an NDA and I am not allowed to disclose any further details on my personal site. I can however, show my contributions to the project in a in-person demo. Please contact me for more details regarding the project or to schedule a time to see it live!</p>
 			</div>
