--- a/content-mutual/index.html
+++ b/content-mutual/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-	<title>Perforce: Case Study</title>
+	<title>Content Mutual: Case Study</title>
 	<link rel="shortcut icon" href="../favicon.ico" />
-	<meta prefix="og: http://ogp.me/ns#" property="og:image" content="https://raw.githubusercontent.com/erchsm/me/gh-pages/perforce/images/bg.png" />
+	<meta prefix="og: http://ogp.me/ns#" property="og:image" content="https://raw.githubusercontent.com/erchsm/me/gh-pages/content-mutual/images/bg.png" />
 	<meta prefix="og: http://ogp.me/ns#" />
-	<meta property="image" content="https://raw.githubusercontent.com/erchsm/me/gh-pages/perforce/images/bg.png"/>
+	<meta property="image" content="https://raw.githubusercontent.com/erchsm/me/gh-pages/content-mutual/images/bg.png"/>
 	<meta name="description" content="I'm a UI/UX Designer & Engineer located in the SF Bay Area. I've prepared this site to showcase my work. For code samples check out my Github.">
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -31,8 +31,9 @@
 						<div id="menu">
 							<ul>
 								<li><a href="../">Home</a></li>
-								<li><a href=".">Perforce</a></li>
+								<li><a href="../perforce/">Perforce</a></li>
 								<li><a href="../givjoy/">GivJoy</a></li>
+								<li><a href=".">Content-Mutual</a></li>
 								<li><a href="../scholastic/">Scholastic</a></li>
 								<li><a href="../cisco/">Cisco</a></li>
 								<li><a href="https://github.com/erchsm/M-E">M&E</a></li>
@@ -47,8 +48,8 @@
 
 			<!-- Main -->
 			<article id="main">
-				<header class="style8">
-					<h2>Helix Sync<span class="x">&times;</span>Perforce</h2>
+				<header class="style9">
+					<h2>Content Mutual</h2>
 <!-- 							<p>Aliquam ut ex ut interdum donec amet imperdiet eleifend</p>
 -->					</header>
 <section class="wrapper style5">
