--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 								<li><a href=".">Home</a></li>
 								<li><a href="perforce/">Perforce</a></li>
 								<li><a href="givjoy/">GivJoy</a></li>
+								<li><a href="content-mutual/">Content-Mutual</a></li>
 								<li><a href="scholastic/">Scholastic</a></li>
 								<li><a href="cisco/">Cisco</a></li>
 								<li><a href="https://github.com/erchsm/M-E">M&E</a></li>
@@ -90,6 +91,16 @@
 				<p>GivJoy is a mobile application and marketplace for spreading joy to others. GivJoy was created in 9 hours during ProtoHack SF, a code-free hackathon.</p>
 				<ul class="actions">
 					<li><a href="givjoy/" class="button fit">Learn More</a></li>
+				</ul>
+			</div>
+		</section>
+		<section class="spotlight">
+			<div class="image"><img src="scholastic/images/Eric/case-study-image.png" alt="" /></div><div class="content">
+			<h2>UX Research:<br />
+				Content Mutual</h2>
+				<p>High-level business strategy re-design for a very young startup called Content Mutual. By conducting extensive user research, we aligned user and business goals by implementing social feed components.</p>
+				<ul class="actions">
+					<li><a href="content-mutual/" class="button fit">Learn More</a></li>
 				</ul>
 			</div>
 		</section>
@@ -168,6 +179,10 @@
 				<script src="js/jquery.scrolly.min.js"></script>
 				<script src="js/skel.min.js"></script>
 				<script src="js/init.js"></script>
+				<script type="text/javascript">
+					window.heap=window.heap||[],heap.load=function(t,e){window.heap.appid=t,window.heap.config=e;var a=document.createElement("script");a.type="text/javascript",a.async=!0,a.src=("https:"===document.location.protocol?"https:":"http:")+"//cdn.heapanalytics.com/js/heap-"+t+".js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(a,n);for(var o=function(t){return function(){heap.push([t].concat(Array.prototype.slice.call(arguments,0)))}},p=["clearEventProperties","identify","setEventProperties","track","unsetEventProperty"],c=0;c<p.length;c++)heap[p[c]]=o(p[c])};
+					heap.load("229332996");
+				</script>
 
 			</body>
 			</html>
