--- a/scholastic/index.html
+++ b/scholastic/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-	<title>Eric Smith's Portfolio</title>
+	<title>Scholastic: Case Study</title>
 	<link rel="shortcut icon" href="../favicon.ico" />
 
 	<meta prefix="og: http://ogp.me/ns#" property="og:image" content="https://raw.githubusercontent.com/erchsm/me/gh-pages/scholastic/images/lanie.png" />
