--- a/content-mutual/index.html
+++ b/content-mutual/index.html
@@ -55,7 +55,7 @@
 <section class="wrapper style5">
 	<div class="inner">
 		
-		<div class="row">
+		<!-- <div class="row">
 			<div class="6u 12u$(medium)">
 				<h3>Helix Sync</h3>
 				<p>I'm currently working at <a href="https://perforce.com">Perforce</a> as a UX Designer! Me and the UX team are working on a project called Helix Sync. The product is in its early stages and I'm creating a concept prototype to test with our existing customers. I'm creating it with this awesome prototyping tool called <a href="https://proto.io">Proto.io</a> & hopefully I'll be able to publish a link here soon!
@@ -67,7 +67,7 @@
 				<span class="image fit"><img src="images/HELIX .png" alt=""/></span>
 				<span class="image fit"><img src="images/HELIX WITH SOME TEXT.png" alt=""/></span>
 			</div>
-		</div>
+		</div> -->
 	</div>
 </section>
 <!-- <header class="style3">
