--- a/content-mutual/index.html
+++ b/content-mutual/index.html
@@ -33,7 +33,7 @@
 								<li><a href="../">Home</a></li>
 								<li><a href="../perforce/">Perforce</a></li>
 								<li><a href="../givjoy/">GivJoy</a></li>
-								<li><a href=".">Content-Mutual</a></li>
+								<li><a href=".">CM</a></li>
 								<li><a href="../scholastic/">Scholastic</a></li>
 								<li><a href="../cisco/">Cisco</a></li>
 								<li><a href="https://github.com/erchsm/M-E">M&E</a></li>
@@ -55,19 +55,18 @@
 <section class="wrapper style5">
 	<div class="inner">
 		
-		<!-- <div class="row">
+		<div class="row">
 			<div class="6u 12u$(medium)">
-				<h3>Helix Sync</h3>
-				<p>I'm currently working at <a href="https://perforce.com">Perforce</a> as a UX Designer! Me and the UX team are working on a project called Helix Sync. The product is in its early stages and I'm creating a concept prototype to test with our existing customers. I'm creating it with this awesome prototyping tool called <a href="https://proto.io">Proto.io</a> & hopefully I'll be able to publish a link here soon!
+				<h3>Content Mutual</h3>
+				<p>Comming soon!
 				</p>
-				<p>In the meantime I've been creating little logos & headlines with Sketch. Enjoy!</p>
 			</div>
-			<div class="6u 12u$(medium)">
+			<!-- <div class="6u 12u$(medium)">
 				<span class="image fit"><img src="images/HELIX  INVERSE.png" alt=""/></span>
 				<span class="image fit"><img src="images/HELIX .png" alt=""/></span>
 				<span class="image fit"><img src="images/HELIX WITH SOME TEXT.png" alt=""/></span>
-			</div>
-		</div> -->
+			</div> -->
+		</div>
 	</div>
 </section>
 <!-- <header class="style3">
