--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 								<li><a href=".">Home</a></li>
 								<li><a href="perforce/">Perforce</a></li>
 								<li><a href="givjoy/">GivJoy</a></li>
-								<li><a href="content-mutual/">Content-Mutual</a></li>
+								<li><a href="content-mutual/">CM</a></li>
 								<li><a href="scholastic/">Scholastic</a></li>
 								<li><a href="cisco/">Cisco</a></li>
 								<li><a href="https://github.com/erchsm/M-E">M&E</a></li>
@@ -95,7 +95,7 @@
 			</div>
 		</section>
 		<section class="spotlight">
-			<div class="image"><img src="scholastic/images/Eric/case-study-image.png" alt="" /></div><div class="content">
+			<div class="image"><img src="content-mutual/images/case-study-image.png" alt="" /></div><div class="content">
 			<h2>UX Research:<br />
 				Content Mutual</h2>
 				<p>High-level business strategy re-design for a very young startup called Content Mutual. By conducting extensive user research, we aligned user and business goals by implementing social feed components.</p>
