--- a/content-mutual/index.html
+++ b/content-mutual/index.html
@@ -58,7 +58,7 @@
 		<div class="row">
 			<div class="6u 12u$(medium)">
 				<h3>Content Mutual</h3>
-				<p>Comming soon!
+				<p>Coming soon!
 				</p>
 			</div>
 			<!-- <div class="6u 12u$(medium)">
