--- a/givjoy/index.html
+++ b/givjoy/index.html
@@ -30,9 +30,10 @@
 						<a href="#" class="menuToggle"><span></span></a>
 						<div id="menu">
 							<ul>
-								<li><a href="../">Home</a></li>
+								li><a href="../">Home</a></li>
 								<li><a href="../perforce/">Perforce</a></li>
 								<li><a href=".">GivJoy</a></li>
+								<li><a href="../content-mutual/">CM</a></li>
 								<li><a href="../scholastic/">Scholastic</a></li>
 								<li><a href="../cisco/">Cisco</a></li>
 								<li><a href="https://github.com/erchsm/M-E">M&E</a></li>
