fixed givjoy bug

--- a/givjoy/index.html
+++ b/givjoy/index.html
@@ -30,7 +30,7 @@
 						<a href="#" class="menuToggle"><span></span></a>
 						<div id="menu">
 							<ul>
-								li><a href="../">Home</a></li>
+								<li><a href="../">Home</a></li>
 								<li><a href="../perforce/">Perforce</a></li>
 								<li><a href=".">GivJoy</a></li>
 								<li><a href="../content-mutual/">CM</a></li>
